--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@vercel/otel": "github:vercel/otel#with-dist",
+    "@opentelemetry/api": "1.4.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
