--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "start:otel-verbose": "NEXT_OTEL_VERBOSE=1 next start"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.4.1",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.36.1",
+    "@opentelemetry/resources": "^1.10.1",
+    "@opentelemetry/sdk-trace-base": "^1.10.1",
+    "@opentelemetry/semantic-conventions": "^1.10.1",
+    "@vercel/og": "^0.5.0",
     "@vercel/otel": "github:vercel/otel#with-dist",
     "next": "latest",
     "react": "^18.2.0",
