--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@opentelemetry/semantic-conventions": "^1.10.1",
     "@vercel/og": "^0.5.0",
     "@vercel/otel": "github:vercel/otel#with-dist",
-    "next": "latest",
+    "next": "13.2.5-canary.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
