--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.36.1",
     "@opentelemetry/resources": "^1.10.1",
+    "@opentelemetry/sdk-node": "^0.36.1",
     "@opentelemetry/sdk-trace-base": "^1.10.1",
     "@opentelemetry/semantic-conventions": "^1.10.1",
     "@vercel/og": "^0.5.0",
